load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@bazel_gomock//:gomock.bzl", "gomock")

gomock(
    name = "mocks",
    out = "groups_mock.go",
    interfaces = [
        "GroupsClientAPI",
    ],
    library = "//vendor/github.com/Azure/azure-sdk-for-go/services/resources/mgmt/2019-05-01/resources/resourcesapi:go_default_library",
    package = "mock_groups",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = ["groups_mock.go"],
    importpath = "sigs.k8s.io/cluster-api-provider-azure/pkg/cloud/azure/services/groups/mock_groups",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/Azure/azure-sdk-for-go/services/resources/mgmt/2019-05-01/resources:go_default_library",
        "//vendor/github.com/Azure/go-autorest/autorest:go_default_library",
        "//vendor/github.com/golang/mock/gomock:go_default_library",
    ],
)
