load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@bazel_gomock//:gomock.bzl", "gomock")

gomock(
    name = "mocks",
    out = "subnets_mock.go",
    interfaces = [
        "SubnetsClientAPI",
    ],
    library = "//vendor/github.com/Azure/azure-sdk-for-go/services/network/mgmt/2019-04-01/network/networkapi:go_default_library",
    package = "mock_subnets",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = ["subnets_mock.go"],
    importpath = "sigs.k8s.io/cluster-api-provider-azure/pkg/cloud/azure/services/subnets/mock_subnets",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/Azure/azure-sdk-for-go/services/network/mgmt/2019-04-01/network:go_default_library",
        "//vendor/github.com/golang/mock/gomock:go_default_library",
    ],
)
